rutines entrenador arreglat
